styles: add scrollbar styles in payout account form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,6 +84,21 @@
   background-position: 'center';
 }
 
+.scrollbar-w-2::-webkit-scrollbar {
+  width: 0.25rem;
+  height: 0.25rem;
+}
 
+.scrollbar-track-blue-lighter::-webkit-scrollbar-track {
+  --bg-opacity: 0.5;
+  background-color: #FFFFFF;
+}
 
+.scrollbar-thumb-blue::-webkit-scrollbar-thumb {
+  --bg-opacity: 0.5;
+  background-color: #016315;
+}
 
+.scrollbar-thumb-rounded::-webkit-scrollbar-thumb {
+  border-radius: 7px;
+}
